force-app/main/default/objects/trailheadapp__Badge__c/fields/trailheadapp__Built_Date__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Built_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - myTrailhead</complianceGroup>
    <label>Built Date</label>
    <type>Date</type>
</CustomField>