force-app/main/default/objects/trailheadapp__Badge__c/fields/trailheadapp__Description__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source - myTrailhead</complianceGroup>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>