force-app/main/default/objects/trailheadapp__Badge__c/fields/trailheadapp__Level__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Level__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_myTrailhead</complianceGroup>
    <description>Difficulty of the training module</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
                <default>true</default>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>