force-app/main/default/objects/trailheadapp__Badge__c/fields/trailheadapp__Products__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Products__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - myTrailhead</complianceGroup>
    <label>Products</label>
    <type>TextArea</type>
</CustomField>