force-app/main/default/objects/trailheadapp__Badge__c/fields/trailheadapp__Roles__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Roles__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - myTrailhead</complianceGroup>
    <label>Roles</label>
    <type>TextArea</type>
</CustomField>