force-app/main/default/objects/trailheadapp__Badge__c/fields/trailheadapp__Type__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - myTrailhead</complianceGroup>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Module</fullName>
                <default>true</default>
                <label>Module</label>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Superbadge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>