force-app/main/default/objects/trailheadapp__Badge__c/fields/trailheadapp__URL__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__URL__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - myTrailhead</complianceGroup>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>